--- a/SpringEcom/src/main/resources/application.properties
+++ b/SpringEcom/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=SpringEcom
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=mysecretpassword
+spring.datasource.username=myuser
+spring.datasource.password=mypassword
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
